lib/sequencer_bindings_generated.dart


  int set_cell_volume(
    int step,
    int column,
    double volume,
  ) {
    return _set_cell_volume(
      step,
      column,
      volume,
    );
  }

  late final _set_cell_volumePtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int, ffi.Float)>>(
      'set_cell_volume');
  late final _set_cell_volume =
      _set_cell_volumePtr.asFunction<int Function(int, int, double)>();

  int reset_cell_volume(
    int step,
    int column,
  ) {
    return _reset_cell_volume(
      step,
      column,
    );
  }

  late final _reset_cell_volumePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
          'reset_cell_volume');
  late final _reset_cell_volume =
      _reset_cell_volumePtr.asFunction<int Function(int, int)>();

  double get_cell_volume(
    int step,
    int column,
  ) {
    return _get_cell_volume(
      step,
      column,
    );
  }

  late final _get_cell_volumePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Int, ffi.Int)>>(
          'get_cell_volume');
  late final _get_cell_volume =
      _get_cell_volumePtr.asFunction<double Function(int, int)>();

  /// Pitch control functions
  int set_sample_bank_pitch(
    int bank,
    double pitch,
  ) {
    return _set_sample_bank_pitch(
      bank,
      pitch,
    );
  }

  late final _set_sample_bank_pitchPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Float)>>(
          'set_sample_bank_pitch');
  late final _set_sample_bank_pitch =
      _set_sample_bank_pitchPtr.asFunction<int Function(int, double)>();

  double get_sample_bank_pitch(
    int bank,
  ) {
    return _get_sample_bank_pitch(
      bank,
    );
  }

  late final _get_sample_bank_pitchPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Int)>>(
          'get_sample_bank_pitch');
  late final _get_sample_bank_pitch =
      _get_sample_bank_pitchPtr.asFunction<double Function(int)>();

  int set_cell_pitch(
    int step,
    int column,
    double pitch,
  ) {
    return _set_cell_pitch(
      step,
      column,
      pitch,
    );
  }

  late final _set_cell_pitchPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int, ffi.Float)>>(
      'set_cell_pitch');
  late final _set_cell_pitch =
      _set_cell_pitchPtr.asFunction<int Function(int, int, double)>();

  int reset_cell_pitch(
    int step,
    int column,
  ) {
    return _reset_cell_pitch(
      step,
      column,
    );
  }

  late final _reset_cell_pitchPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
          'reset_cell_pitch');
  late final _reset_cell_pitch =
      _reset_cell_pitchPtr.asFunction<int Function(int, int)>();

  double get_cell_pitch(
    int step,
    int column,
  ) {
    return _get_cell_pitch(
      step,
      column,
    );
  }

  late final _get_cell_pitchPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Int, ffi.Int)>>(
          'get_cell_pitch');
  late final _get_cell_pitch =
      _get_cell_pitchPtr.asFunction<double Function(int, int)>();

  /// Output recording/rendering functions (captures mixed grid output to WAV file)
  int start_recording(
    ffi.Pointer<ffi.Char> output_file_path,
  ) {
    return _start_recording(
      output_file_path,
    );
  }

  late final _start_recordingPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'start_recording');
  late final _start_recording =
      _start_recordingPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int stop_recording() {
    return _stop_recording();
  }

  late final _stop_recordingPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('stop_recording');
  late final _stop_recording = _stop_recordingPtr.asFunction<int Function()>();

  int is_recording() {
    return _is_recording();
  }

  late final _is_recordingPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('is_recording');
  late final _is_recording = _is_recordingPtr.asFunction<int Function()>();

  int get_recording_duration() {
    return _get_recording_duration();
  }

  late final _get_recording_durationPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function()>>(
          'get_recording_duration');
  late final _get_recording_duration =
      _get_recording_durationPtr.asFunction<int Function()>();

  /// Diagnostic functions for performance monitoring
  int get_active_cell_node_count() {
    return _get_active_cell_node_count();
  }

  late final _get_active_cell_node_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'get_active_cell_node_count');
  late final _get_active_cell_node_count =
      _get_active_cell_node_countPtr.asFunction<int Function()>();

  int get_max_cell_node_count() {
    return _get_max_cell_node_count();
  }

  late final _get_max_cell_node_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'get_max_cell_node_count');
  late final _get_max_cell_node_count =
      _get_max_cell_node_countPtr.asFunction<int Function()>();
}

/// mbstate_t is an opaque object to keep conversion state, during multibyte
/// stream conversions.  The content must not be referenced by user programs.
final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;

  /// for alignment
  @ffi.LongLong()
  external int _mbstateL;
}

final class __darwin_pthread_handler_rec extends ffi.Struct {
  /// Routine to call
  external ffi
      .Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>
      __routine;

  /// Argument to pass
  external ffi.Pointer<ffi.Void> __arg;

  external ffi.Pointer<__darwin_pthread_handler_rec> __next;
}

final class _opaque_pthread_attr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_cond_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([40])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_condattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutex_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutexattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_once_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlock_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([192])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlockattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  external ffi.Pointer<__darwin_pthread_handler_rec> __cleanup_stack;

  @ffi.Array.multi([8176])
  external ffi.Array<ffi.Char> __opaque;
}

const int __WORDSIZE = 64;

const int __has_safe_buffers = 1;

const int __DARWIN_ONLY_64_BIT_INO_T = 0;

const int __DARWIN_ONLY_UNIX_CONFORMANCE = 1;

const int __DARWIN_ONLY_VERS_1050 = 0;

const int __DARWIN_UNIX03 = 1;

const int __DARWIN_64_BIT_INO_T = 1;

const int __DARWIN_VERS_1050 = 1;

const int __DARWIN_NON_CANCELABLE = 0;

const String __DARWIN_SUF_64_BIT_INO_T = '\$INODE64';

const String __DARWIN_SUF_1050 = '\$1050';

const String __DARWIN_SUF_EXTSN = '\$DARWIN_EXTSN';

const int __DARWIN_C_ANSI = 4096;

const int __DARWIN_C_FULL = 900000;

const int __DARWIN_C_LEVEL = 900000;

const int __STDC_WANT_LIB_EXT1__ = 1;

const int __DARWIN_NO_LONG_LONG = 0;

const int _DARWIN_FEATURE_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_UNIX_CONFORMANCE = 1;

const int _DARWIN_FEATURE_UNIX_CONFORMANCE = 3;

const int __has_ptrcheck = 0;

const int __DARWIN_NULL = 0;

const int __PTHREAD_SIZE__ = 8176;

const int __PTHREAD_ATTR_SIZE__ = 56;

const int __PTHREAD_MUTEXATTR_SIZE__ = 8;

const int __PTHREAD_MUTEX_SIZE__ = 56;

const int __PTHREAD_CONDATTR_SIZE__ = 8;

const int __PTHREAD_COND_SIZE__ = 40;

const int __PTHREAD_ONCE_SIZE__ = 8;

const int __PTHREAD_RWLOCK_SIZE__ = 192;

const int __PTHREAD_RWLOCKATTR_SIZE__ = 16;

const int USER_ADDR_NULL = 0;

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;

const int INT_LEAST32_MAX = 2147483647;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST8_MAX = 255;

const int UINT_LEAST16_MAX = 65535;

const int UINT_LEAST32_MAX = 4294967295;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST8_MIN = -128;

const int INT_FAST16_MIN = -32768;

const int INT_FAST32_MIN = -2147483648;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST8_MAX = 127;

const int INT_FAST16_MAX = 32767;

const int INT_FAST32_MAX = 2147483647;

const int INT_FAST64_MAX = 9223372036854775807;

const int UINT_FAST8_MAX = 255;

const int UINT_FAST16_MAX = 65535;

const int UINT_FAST32_MAX = 4294967295;

const int UINT_FAST64_MAX = -1;

const int INTPTR_MAX = 9223372036854775807;

const int INTPTR_MIN = -9223372036854775808;

const int UINTPTR_MAX = -1;

const int INTMAX_MAX = 9223372036854775807;

const int UINTMAX_MAX = -1;

const int INTMAX_MIN = -9223372036854775808;

const int PTRDIFF_MIN = -9223372036854775808;

const int PTRDIFF_MAX = 9223372036854775807;

const int SIZE_MAX = -1;

const int RSIZE_MAX = 9223372036854775807;

const int WCHAR_MAX = 2147483647;

const int WCHAR_MIN = -2147483648;

const int WINT_MIN = -2147483648;

const int WINT_MAX = 2147483647;

const int SIG_ATOMIC_MIN = -2147483648;

const int SIG_ATOMIC_MAX = 2147483647;

const int MAX_SLOTS = 1024;
